--- a/app/src/main/res/layout/activity_pay_request_transaction.xml
+++ b/app/src/main/res/layout/activity_pay_request_transaction.xml
@@ -228,6 +228,7 @@
                     android:background="@color/light_gray" />
 
                 <LinearLayout
+                    android:id="@+id/addNoteClickLL"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingTop="@dimen/_15sdp">
