--- a/app/src/main/res/layout/profileqrcode.xml
+++ b/app/src/main/res/layout/profileqrcode.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F2F4F5"
-    android:paddingBottom="@dimen/_20sdp">
+    android:background="#F2F4F5">
 
     <LinearLayout
         android:id="@+id/layoutHead"
@@ -63,7 +62,7 @@
                         android:layout_centerHorizontal="true"
                         android:layout_marginTop="@dimen/_14sdp"
                         app:cardBackgroundColor="@color/white"
-                        app:cardCornerRadius="@dimen/_30sdp">
+                        app:cardCornerRadius="@dimen/_20sdp">
 
                         <RelativeLayout
                             android:layout_width="match_parent"
