--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -1,5 +1,6 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,14 +11,27 @@
     <com.greenbox.coyni.custom_camera.SquareCameraPreview
         android:id="@+id/camera_preview_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_above="@+id/camera_tools_view"/>
 
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:id="@+id/cameraCloseIV"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        />
+        android:paddingEnd="@dimen/_10sdp"
+        android:layout_marginStart="@dimen/_21sdp"
+        android:layout_marginTop="@dimen/_45sdp">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_close"
+            app:tint="@color/white"
+             />
+    </LinearLayout>
 
     <View
         android:id="@+id/cover_top_view"
@@ -37,25 +51,24 @@
         android:id="@+id/camera_tools_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/camera_preview_view"
         android:layout_alignParentBottom="true"
-        android:padding="10dp"
-        android:orientation="horizontal"
         android:background="@color/black"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:padding="10dp">
 
         <ImageView
             android:id="@+id/change_camera"
             android:layout_width="0dp"
             android:layout_height="@dimen/_25sdp"
-            android:layout_weight="1"/>
+            android:layout_weight="1" />
 
         <ImageView
             android:id="@+id/capture_image_button"
             android:layout_width="0dp"
             android:layout_height="@dimen/_60sdp"
-            android:src="@drawable/capture_photo_button"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:src="@drawable/capture_photo_button" />
 
         <LinearLayout
             android:id="@+id/flash"
@@ -63,7 +76,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center_horizontal"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:visibility="invisible">
 
             <ImageView
                 android:id="@+id/flash_icon"
@@ -74,12 +88,12 @@
                 android:id="@+id/auto_flash_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
-                android:layout_gravity="center_vertical"
                 android:text="Auto"
                 android:textColor="@android:color/white"
-                android:textSize="14sp"/>
+                android:textSize="14sp" />
 
         </LinearLayout>
 
