--- a/app/src/main/res/drawable-v24/bg_corefull.xml
+++ b/app/src/main/res/drawable-v24/bg_corefull.xml
@@ -3,10 +3,10 @@
 
     <item>
         <shape>
-            <stroke android:color="#00a6a2"
-                android:width="@dimen/_3sdp"/>
-            <corners android:radius="@dimen/_30sdp"
-                />
+            <stroke
+                android:width="@dimen/_1sdp"
+                android:color="@color/primary_green" />
+            <corners android:radius="@dimen/_21sdp" />
 
 
         </shape>
