--- a/app/src/main/res/layout/activity_removing_btm_sheet.xml
+++ b/app/src/main/res/layout/activity_removing_btm_sheet.xml
@@ -1,120 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
     android:background="@drawable/bg_core"
-    android:padding="@dimen/_20sdp"
-    >
+    android:orientation="vertical"
+    android:padding="@dimen/_20sdp">
+
     <View
         android:layout_width="@dimen/_60sdp"
         android:layout_height="@dimen/_2sdp"
-        android:background="@color/primary_green"
         android:layout_gravity="center"
         android:layout_marginTop="@dimen/_13sdp"
         android:layout_marginBottom="@dimen/_28sdp"
-        />
+        android:background="@color/primary_green" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Removing"
         android:fontFamily="@font/opensans_bold"
-        android:textSize="@dimen/_16ssp"
-        android:layout_marginBottom="@dimen/_11sdp"
-        />
-    <LinearLayout
+        android:text="Removing"
+        android:textColor="@color/black"
+        android:textSize="@dimen/_16ssp" />
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        >
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_visa"
-        android:paddingBottom="@dimen/_11sdp"
-        android:paddingTop="@dimen/_11sdp"
-        android:layout_marginRight="@dimen/_12sdp"
+        android:layout_marginTop="@dimen/_11sdp"
+        android:paddingTop="@dimen/_15sdp"
+        android:paddingBottom="@dimen/_15sdp">
 
-        />
-        <TextView
+        <ImageView
+            android:id="@+id/imgBankIcon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Visa Debit"
-            android:textSize="@dimen/_12ssp"
-            android:fontFamily="@font/opensans_semibold"
-            android:gravity="left"
-            android:paddingTop="@dimen/_17sdp"
-            android:paddingBottom="@dimen/_16sdp"
-        />
-        <TextView
-            android:layout_width="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="@dimen/_12sdp"
+            android:src="@drawable/ic_bankactive" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="••••5359"
-            android:textSize="@dimen/_11ssp"
-            android:fontFamily="@font/opensans_semibold"
-            android:gravity="left"
-            android:paddingTop="@dimen/_17sdp"
-            android:paddingBottom="@dimen/_17sdp"
-            />
-    </LinearLayout>
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@+id/imgBankIcon"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tvBankName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.6"
+                android:fontFamily="@font/opensans_semibold"
+                android:gravity="left"
+                android:text="Bank Name"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_12ssp" />
+
+            <TextView
+                android:id="@+id/tvAccount"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1.4"
+                android:fontFamily="@font/opensans_semibold"
+                android:gravity="left"
+                android:text="••••5359"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_11ssp" />
+        </LinearLayout>
+    </RelativeLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/_1sdp"
-        android:background="@color/light_gray"
         android:layout_gravity="center"
         android:layout_marginBottom="@dimen/_28sdp"
-        />
+        android:background="@color/light_gray" />
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_height="@dimen/_43sdp"
+        android:layout_marginBottom="@dimen/_20sdp"
         android:gravity="center"
-        android:layout_marginBottom="@dimen/_20sdp">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/_34sdp"
-            android:paddingRight="@dimen/_34sdp"
-            android:paddingTop="@dimen/_13sdp"
-            android:paddingBottom="@dimen/_13sdp"
-            android:text="No"
-            android:textColor="@color/primary_color"
-            android:background="@drawable/bg_corefull"
-            android:gravity="center"
-            android:fontFamily="@font/opensans_bold"
-            android:layout_weight="1"
-            />
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/_34sdp"
-            android:paddingRight="@dimen/_34sdp"
-            android:paddingTop="@dimen/_13sdp"
-            android:layout_marginLeft="@dimen/_8sdp"
-            android:paddingBottom="@dimen/_13sdp"
-            android:text="Yes"
-            android:textColor="@color/white"
-            android:background="@drawable/bg_core_colorfill"
-            android:gravity="center"
-            android:fontFamily="@font/opensans_bold"
-            android:layout_weight="1"
-            />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="78dp"
         android:orientation="horizontal">
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/tvNo"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginLeft="32dp"
-            android:layout_marginTop="18dp"
-            android:orientation="horizontal" />
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/bg_corefull"
+            android:fontFamily="@font/opensans_bold"
+            android:gravity="center"
+            android:text="No"
+            android:textColor="@color/primary_color"
+            android:textSize="@dimen/_12ssp" />
 
+        <TextView
+            android:id="@+id/tvYes"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/_8sdp"
+            android:layout_weight="1"
+            android:background="@drawable/bg_core_colorfill"
+            android:fontFamily="@font/opensans_bold"
+            android:gravity="center"
+            android:text="Yes"
+            android:textColor="@color/white"
+            android:textSize="@dimen/_11ssp" />
     </LinearLayout>
 
 </LinearLayout>
