--- a/app/src/main/res/layout/activity_identity_verification.xml
+++ b/app/src/main/res/layout/activity_identity_verification.xml
@@ -134,29 +134,41 @@
                         android:textSize="@dimen/_11ssp"
                         android:visibility="visible" />
 
-                    <TextView
-                        android:id="@+id/idveriUpIdSuccessTxt"
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:id="@+id/fileSelectedLL"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="@dimen/_17sdp"
-                        android:layout_marginTop="@dimen/_20sdp"
-                        android:layout_marginEnd="5dp"
-                        android:layout_marginBottom="@dimen/_18sdp"
-                        android:fontFamily="@font/opensans_regular"
-                        android:lineSpacingExtra="@dimen/_6sdp"
-                        android:text="@string/contentuploadidsuccess"
-                        android:textColor="@color/primary_color"
-                        android:textSize="@dimen/_11ssp"
-                        android:visibility="gone" />
+                        android:orientation="horizontal"
+                        android:visibility="visible">
 
-                    <ImageView
-                        android:id="@+id/idveriUpIdSuccessImg"
-                        android:layout_width="@dimen/_15sdp"
-                        android:layout_height="@dimen/_15sdp"
-                        android:layout_gravity="center"
-                        android:layout_marginStart="@dimen/_25sdp"
-                        android:src="@drawable/ic_complete"
-                        android:visibility="gone" />
+                        <TextView
+                            android:id="@+id/idveriUpIdSuccessTxt"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="@dimen/_17sdp"
+                            android:layout_marginTop="@dimen/_20sdp"
+                            android:layout_marginEnd="5dp"
+                            android:layout_marginBottom="@dimen/_18sdp"
+                            android:fontFamily="@font/opensans_regular"
+                            android:lineSpacingExtra="@dimen/_6sdp"
+                            android:text="@string/contentuploadidsuccess"
+                            android:textColor="@color/primary_color"
+                            android:textSize="@dimen/_11ssp"
+                            android:visibility="visible"
+                            android:layout_weight="1"
+                            android:singleLine="true"/>
+
+                        <ImageView
+                            android:id="@+id/idveriUpIdSuccessImg"
+                            android:layout_width="@dimen/_15sdp"
+                            android:layout_height="@dimen/_15sdp"
+                            android:layout_gravity="center"
+                            android:src="@drawable/ic_complete"
+                            android:visibility="visible"
+                            android:layout_marginEnd="@dimen/_15sdp"/>
+
+
+                    </LinearLayout>
 
 
                 </LinearLayout>
@@ -195,6 +207,29 @@
 
                 </com.google.android.material.textfield.TextInputLayout>
 
+                <LinearLayout
+                    android:id="@+id/ssnErrorLL"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:visibility="gone">
+
+                    <ImageView
+                        android:layout_width="@dimen/_12sdp"
+                        android:layout_height="@dimen/_12sdp"
+                        android:src="@drawable/ic_erro" />
+
+                    <TextView
+                        android:id="@+id/ssnErrorTV"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/_10sdp"
+                        android:fontFamily="@font/opensans_regular"
+                        android:textColor="@color/error_red"
+                        android:textSize="@dimen/_10ssp" />
+                </LinearLayout>
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/idveriDOBCL"
@@ -250,7 +285,9 @@
                             android:padding="@dimen/_14sdp"
                             android:textColor="@color/black"
                             android:textColorHint="@color/light_gray"
-                            android:textSize="@dimen/_12ssp" />
+                            android:textSize="@dimen/_12ssp"
+                            android:cursorVisible="false"
+                            android:editable="false"/>
 
 
                     </com.google.android.material.textfield.TextInputLayout>
