--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -11,9 +11,7 @@
     <com.greenbox.coyni.custom_camera.SquareCameraPreview
         android:id="@+id/camera_preview_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_above="@+id/camera_tools_view"/>
+        android:layout_height="match_parent" />
 
 
     <LinearLayout
@@ -55,7 +53,8 @@
         android:background="@color/black"
         android:gravity="center"
         android:orientation="horizontal"
-        android:padding="10dp">
+        android:padding="10dp"
+        android:layout_below="@+id/camera_preview_view">
 
         <ImageView
             android:id="@+id/change_camera"
