--- a/app/src/main/res/layout/activity_agreements.xml
+++ b/app/src/main/res/layout/activity_agreements.xml
@@ -97,7 +97,8 @@
                 android:text="@string/pastagree"
                 android:textColor="@color/primary_black"
                 android:textSize="@dimen/_12ssp"
-                android:visibility="visible" />
+                android:visibility="visible"
+                android:id="@+id/pastTV"/>
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cvPast"
