--- a/app/src/main/res/layout/activity_confirm_password.xml
+++ b/app/src/main/res/layout/activity_confirm_password.xml
@@ -33,98 +33,124 @@
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_close" />
 
-    </LinearLayout>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Confirm Password"
-        android:fontFamily="@font/opensans_bold"
-        android:textSize="@dimen/_16ssp"
-        android:textColor="@color/black"
-        android:layout_marginStart="@dimen/_21sdp"
-        />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="As a security measure, you will be logged out of your account once you successfully change your password. "
-        android:layout_marginStart="@dimen/_22sdp"
-        android:layout_marginEnd="@dimen/_22sdp"
-        android:layout_marginTop="@dimen/_14sdp"
-        android:fontFamily="@font/opensans_regular"
-        android:lineSpacingExtra="@dimen/_5sdp"
-        android:textSize="@dimen/_12ssp"
-        android:textColor="@color/primary_black"
-        />
+            </LinearLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/currentPassTIL"
-        style="@style/TextInputLayout.OutlinedBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_22sdp"
-        android:layout_marginStart="@dimen/_21sdp"
-        android:layout_marginEnd="@dimen/_21sdp"
-        android:hint="Current Password"
-        android:textColorHint="@color/black"
-        app:boxStrokeColor="@color/primary_green"
-        app:errorTextColor="@color/error_red"
-        app:endIconDrawable="@drawable/ic_eyeclose"
-        app:endIconMode="custom"
-        app:passwordToggleEnabled="true"
-        app:expandedHintEnabled="false"
-        app:hintTextColor="@color/primary_green"
-        app:errorIconDrawable="@null">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_21sdp"
+                android:fontFamily="@font/opensans_bold"
+                android:text="Confirm Password"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_16ssp" />
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/currentPassET"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/opensans_semibold"
-            android:hint="8-12 Characters"
-            android:imeOptions="actionDone"
-            android:inputType="textPassword"
-            android:padding="@dimen/_14sdp"
-            android:textColor="@color/text_color"
-            android:textColorHint="@color/light_gray"
-            android:textCursorDrawable="@drawable/cursor_color"
-            android:textSize="@dimen/_12ssp"
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_22sdp"
+                android:layout_marginTop="@dimen/_14sdp"
+                android:layout_marginEnd="@dimen/_22sdp"
+                android:fontFamily="@font/opensans_regular"
+                android:lineSpacingExtra="@dimen/_5sdp"
+                android:text="As a security measure, you will be logged out of your account once you successfully change your password. "
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_12ssp" />
 
-            android:longClickable="false"
-            android:maxLength="12"
-            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!@#$%*?"
-            android:maxLines="1"
-            />
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/currentPassTIL"
+                style="@style/TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_21sdp"
+                android:layout_marginTop="@dimen/_22sdp"
+                android:layout_marginEnd="@dimen/_21sdp"
+                android:hint="Current Password"
+                android:textColorHint="@color/black"
+                app:boxStrokeColor="@color/primary_green"
+                app:endIconDrawable="@drawable/ic_eyeclose"
+                app:endIconMode="custom"
+                app:errorIconDrawable="@null"
+                app:errorTextColor="@color/error_red"
+                app:expandedHintEnabled="false"
+                app:hintTextColor="@color/primary_green"
+                app:passwordToggleEnabled="true">
 
-    </com.google.android.material.textfield.TextInputLayout>
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/currentPassET"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!@#$%*?"
+                    android:fontFamily="@font/opensans_semibold"
+                    android:hint="8-12 Characters"
+                    android:imeOptions="actionDone"
+                    android:inputType="textPassword"
+                    android:longClickable="false"
+                    android:maxLength="12"
+                    android:maxLines="1"
+                    android:padding="@dimen/_14sdp"
+
+                    android:textColor="@color/text_color"
+                    android:textColorHint="@color/light_gray"
+                    android:textCursorDrawable="@drawable/cursor_color"
+                    android:textSize="@dimen/_12ssp" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <LinearLayout
+                android:id="@+id/layoutPwdError"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:orientation="horizontal"
+                android:visibility="gone"
+                android:layout_marginStart="@dimen/_21sdp"
+                android:layout_marginEnd="@dimen/_21sdp">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_erro" />
+
+                <TextView
+                    android:id="@+id/tvPwdError"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/_10sdp"
+                    android:fontFamily="@font/opensans_regular"
+                    android:textColor="@color/error_red"
+                    android:textSize="@dimen/_12ssp" />
+            </LinearLayout>
+
         </LinearLayout>
-    <LinearLayout
-        android:id="@+id/cardNextbtn"
-        android:layout_width="match_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_height="@dimen/_48sdp"
-        android:orientation="vertical">
-        <androidx.cardview.widget.CardView
-            android:id="@+id/saveBtnCV"
+
+        <LinearLayout
+            android:id="@+id/cardNextbtn"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_43sdp"
-            android:layout_marginEnd="@dimen/_21sdp"
-            android:layout_marginStart="@dimen/_21sdp"
-            app:cardBackgroundColor="@color/inactive_color"
-            app:cardCornerRadius="@dimen/_21sdp">
+            android:layout_height="@dimen/_48sdp"
+            android:layout_alignParentBottom="true"
+            android:orientation="vertical">
 
-          <TextView
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:text="Next"
-              android:paddingTop="@dimen/_14sdp"
-              android:textSize="@dimen/_12ssp"
-              android:textColor="@color/white"
-              android:fontFamily="@font/opensans_bold"
-              android:textAlignment="center"
-              android:gravity="center"
-              />
-        </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView
+                android:id="@+id/saveBtnCV"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_43sdp"
+                android:layout_marginStart="@dimen/_21sdp"
+                android:layout_marginEnd="@dimen/_21sdp"
+                app:cardBackgroundColor="@color/inactive_color"
+                app:cardCornerRadius="@dimen/_21sdp">
 
-    </LinearLayout>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/opensans_bold"
+                    android:gravity="center"
+                    android:paddingTop="@dimen/_14sdp"
+                    android:text="Next"
+                    android:textAlignment="center"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_12ssp" />
+            </androidx.cardview.widget.CardView>
+
+        </LinearLayout>
     </RelativeLayout>
 </LinearLayout>
