--- a/app/src/main/res/layout/activity_edit_address.xml
+++ b/app/src/main/res/layout/activity_edit_address.xml
@@ -135,7 +135,7 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/address1ErrorLL"
                     android:layout_marginTop="@dimen/_14sdp"
-                    android:hint="Address Line 2"
+                    android:hint="Address Line 2 (Optional)"
                     android:textColorHint="@color/black"
                     app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                     app:boxCornerRadiusBottomStart="@dimen/_10sdp"
