--- a/app/src/main/res/layout/activity_addpayment_method.xml
+++ b/app/src/main/res/layout/activity_addpayment_method.xml
@@ -62,15 +62,16 @@
                 android:fontFamily="@font/opensans_regular"
                 android:text="There is no payment method currently \nlinked to your account. Please follow one of \nthe prompts below to link an account."
                 android:textColor="@color/primary_black"
-                android:textSize="@dimen/_12ssp" />
+                android:textSize="@dimen/_12ssp"
+                android:visibility="gone" />
 
-            <LinearLayout
+            <RelativeLayout
                 android:id="@+id/lyExternal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_20sdp"
                 android:background="@drawable/paymentsborder"
                 android:gravity="center_vertical"
-                android:orientation="horizontal"
                 android:paddingLeft="@dimen/_11sdp"
                 android:paddingTop="@dimen/_11sdp"
                 android:paddingRight="@dimen/_7sdp"
@@ -80,6 +81,7 @@
                     android:id="@+id/imgBankIcon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
                     android:layout_marginRight="@dimen/_12sdp"
                     android:src="@drawable/ic__01_bank" />
 
@@ -87,6 +89,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="@dimen/_20sdp"
+                    android:layout_toLeftOf="@+id/imgBankArrow"
+                    android:layout_toRightOf="@+id/imgBankIcon"
                     android:orientation="vertical">
 
                     <LinearLayout
@@ -122,7 +126,7 @@
                         android:fontFamily="@font/opensans_regular"
                         android:text="Can be used for making Coyni purchases\nor withdrawing funds."
                         android:textColor="@color/dark_grey"
-                        android:textSize="@dimen/_10ssp" />
+                        android:textSize="@dimen/_9ssp" />
 
                     <TextView
                         android:id="@+id/tvBankError"
@@ -140,8 +144,10 @@
                     android:id="@+id/imgBankArrow"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
                     android:src="@drawable/ic_chevron_right" />
-            </LinearLayout>
+            </RelativeLayout>
 
             <RelativeLayout
                 android:id="@+id/layoutDCard"
@@ -205,7 +211,7 @@
                         android:fontFamily="@font/opensans_regular"
                         android:text="Visa or Mastercard debit cards"
                         android:textColor="@color/dark_grey"
-                        android:textSize="@dimen/_10sdp" />
+                        android:textSize="@dimen/_9sdp" />
 
                     <TextView
                         android:id="@+id/tvDCardError"
@@ -287,7 +293,7 @@
                         android:fontFamily="@font/opensans_regular"
                         android:text="Visa, MasterCard, Discover, and American \nExpress credit cards"
                         android:textColor="@color/dark_grey"
-                        android:textSize="@dimen/_10sdp" />
+                        android:textSize="@dimen/_9sdp" />
 
                     <TextView
                         android:id="@+id/tvCCardError"
