--- a/app/src/main/res/layout/activity_removing_btm_sheet.xml
+++ b/app/src/main/res/layout/activity_removing_btm_sheet.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/bg_core"
+    android:background="@drawable/roundeddialog"
     android:orientation="vertical"
     android:padding="@dimen/_20sdp">
 
