--- a/app/src/main/res/layout/activity_agreements.xml
+++ b/app/src/main/res/layout/activity_agreements.xml
@@ -58,6 +58,7 @@
             android:paddingEnd="@dimen/_11sdp">
 
             <TextView
+                android:id="@+id/activeTV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_10sdp"
