--- a/app/src/main/res/layout/activity_retake.xml
+++ b/app/src/main/res/layout/activity_retake.xml
@@ -27,14 +27,16 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/_200sdp"
         android:layout_centerInParent="true"
-        android:padding="@dimen/_30sdp">
+        android:background="@drawable/bounding_box"
+        android:padding="@dimen/_5sdp"
+        android:layout_margin="@dimen/_20sdp">
 
         <ImageView
             android:id="@+id/croppedIV"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:scaleType="fitXY"/>
     </RelativeLayout>
 
